# BrainPy

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
bf2py/: __init__.py  cli.py  core.py
brainpy/: cli.py  exceptions.py
tests/: __init__.py  test_basic.py  test_perfomance.py
